Changes discusses for initial prototype

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,6 +1,7 @@
 .footer {
     background-color: #05122d;
     color: #eee;
+    margin-top: 3rem;
     padding: 2rem 1rem 4rem 1rem;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
