--- a/src/components/Content.css
+++ b/src/components/Content.css
@@ -8,18 +8,10 @@
   line-height: 1.3;
   text-shadow: 0 1px 3px rgba(0,0,0,0.1);
   position: relative; 
+  text-decoration: underline #3498db solid 3px;
+  text-underline-offset: 10px;
 }
 
-.content-heading::before {
-  content: ''; 
-  position: absolute; 
-  left: 0; 
-  bottom: 0; 
-  height: 3px; 
-  width: 150px; 
-  background-color: #3498db; 
-  border-radius: 2px; 
-}
 
 .content {
   color: #34495e; 
